Fix linear gradient issue with tables on safari

--- a/resources/css/reviews.css
+++ b/resources/css/reviews.css
@@ -139,7 +139,7 @@
     padding-left: 20px;
 
     text-align: center;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
     font-family: 'Open Sans', sans-serif;
     text-transform: uppercase;
 
@@ -151,14 +151,21 @@
     border: 0px;
     color: white;
     padding: 14px;
-    padding-left: 22px;
     vertical-align: middle;
 }
 
+.reviews-content .anime-table td:first-child {
+    padding-left: 22px;
+}
+
+.reviews-content .anime-table tr {
+    background-attachment: fixed;
+}
+
 .reviews-content .anime-table tr:nth-child(odd) {
-    background: linear-gradient(to right, #555 , #666);
+    background-image: linear-gradient(to right, #555 , #666);
 }
 
 .reviews-content .anime-table tr:nth-child(even) {
-    background: linear-gradient(to right, #666 , #777);
+    background-image: linear-gradient(to right, #666 , #777);
 }
